--- a/server/views/Auth/login.ejs
+++ b/server/views/Auth/login.ejs
@@ -1,36 +1,35 @@
-<%- include('../Partials/header'); -%> 
-<%- include('../Partials/main_nav'); -%> 
+<%- include('../Partials/header'); -%>
+<%- include('../Partials/main_nav'); -%>
 <main class="container">
     <!--Message Area-->
-    <% if(message.length > 0){
-        <div class="alter alter-danger">
+    <% if (message && message.length > 0) { %>
+        <div class="alert alert-danger">
             <%= message %>
         </div>
     <% } %>
     <div class="row">
-        <div class="offser-md-4 col-md-4">
-            <h1>Please login</h1>
+        <div class="offset-md-4 col-md-4">
+            <h1>Please Login</h1>
             <form method="post" autocomplete="off">
                 <fieldset class="form-group">
-                    <label for="username"></label>
+                    <label for="username">Username</label>
                     <input type="text" class="form-control"
-                    name="username" placeholder="Enter the username"
-                    id="username" required autofocus>
+                        name="username" placeholder="Enter your username"
+                        id="username" required autofocus>
                 </fieldset>
                 <fieldset class="form-group">
-                    <label for="password"></label>
+                    <label for="password">Password</label>
                     <input type="password" class="form-control"
-                    name="password" placeholder="Enter the password"
-                    id="password" required>
-                    or
-                    <a href="/register">Register Here</a>
+                        name="password" placeholder="Enter your password"
+                        id="password" required>
+                    <p>or <a href="/register">Register Here</a></p>
                 </fieldset>
                 <fieldset class="form-group">
                     <input type="submit" class="btn btn-success"
-                    value="Login">
+                        value="Login">
                     <a href="/">
-                    <input type="button" class="btn btn-warning"
-                    value="Cancel">
+                        <input type="button" class="btn btn-warning"
+                            value="Cancel">
                     </a>
                 </fieldset>
             </form>
