--- a/server/views/Auth/register.ejs
+++ b/server/views/Auth/register.ejs
@@ -1,48 +1,50 @@
-<%- include('../Partials/header'); -%> 
-<%- include('../Partials/main_nav'); -%> 
+<%- include('../Partials/header'); -%>
+<%- include('../Partials/main_nav'); -%>
 <!--Message Area-->
 <main class="container">
-    <% if(message.length > 0){
-        <div class="alter alter-danger">
+    <% if (message && message.length > 0) { %>
+        <div class="alert alert-danger">
             <%= message %>
         </div>
     <% } %>
     <div class="row">
-        <div class="offser-md-4 col-md-4">
-            <h1>Please login</h1>
+        <div class="offset-md-4 col-md-4">
+            <h1>Please Register</h1>
             <form method="post" autocomplete="off">
                 <fieldset class="form-group">
-                    <label for="username"></label>
+                    <label for="username">Username</label>
                     <input type="text" class="form-control"
-                    name="username" placeholder="Enter the username"
-                    id="username" required autofocus>
+                        name="username" placeholder="Enter the username"
+                        id="username" required autofocus>
                 </fieldset>
                 <fieldset class="form-group">
-                    <label for="passward"></label>
-                    <input type="passward" class="form-control"
-                    name="passward" placeholder="Enter the passward"
-                    id="passward" required>
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control"
+                        name="password" placeholder="Enter the password"
+                        id="password" required>
                 </fieldset>
                 <fieldset class="form-group">
-                    <label for="email"></label>
-                    <input type="text" class="form-control"
-                    name="email" placeholder="Enter the email"
-                    id="email" required >
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control"
+                        name="email" placeholder="Enter the email"
+                        id="email" required>
                 </fieldset>
                 <fieldset class="form-group">
-                    <label for="displayName"></label>
+                    <label for="displayName">Display Name</label>
                     <input type="text" class="form-control"
-                    name="displayName" placeholder="Enter the displayName"
-                    id="displayName" required >
+                        name="displayName" placeholder="Enter the display name"
+                        id="displayName" required>
                 </fieldset>
+                <br>
                 <fieldset class="form-group text-right">
                     <input type="submit" class="btn btn-success"
-                    value="Register">
+                        value="Register">
                     <a href="/">
-                    <input type="button" class="btn btn-warning"
-                    value="Cancel">
+                        <input type="button" class="btn btn-warning"
+                            value="Cancel">
                     </a>
                 </fieldset>
+            </form>
         </div>
     </div>
 </main>
