--- a/server/views/Partials/footer.ejs
+++ b/server/views/Partials/footer.ejs
@@ -1,10 +1,9 @@
-<!-- Footer -->
+<!--footer-->
 <footer>
-  <nav class="navbar fixed-bottom navbar-dark" style="background-color:#666a6e;">
-    <h6 class="navbar-text" style="color: white; font-weight: bold;">
-      &copy; Copyright 2024. All rights reserved
-    </h6>
+  <nav class="navbar fixed-bottom navbar-dark bg-dark">
+    <h6 class="navbar-text">&copy; Copyright 2024. All rights reserved</h6>
+    <h6 class="navbar-text"> Group 16: Tala Bashanfar, Ethar Almaghrabi, Ashvien Rameshkumar  .</h6>
   </nav>
-</footer>
+  </footer>
 </body>
 </html>
