--- a/server/views/Partials/header.ejs
+++ b/server/views/Partials/header.ejs
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%= title %></title> <!-- the page title from the server-side -->
+    
+    <!--link to the custom CSS file for styling the app -->
     <link rel='stylesheet' href='/Content/app.css' />
+    <!--link to the Bootstrap CSS file for responsive design and ready-made UI components -->
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css"/>
+    <!--link to Font Awesome for using icons throughout the page-->
     <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css"/>
+    <!--the bootstrap javaScript file-->
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!--link to the custom JavaScript file for app-specific functionality -->
     <script src="/Script/app.js"></script>
-
   </head>
-  <body>
+  <body> 
+
