--- a/server/views/Partials/footer.ejs
+++ b/server/views/Partials/footer.ejs
@@ -1,6 +1,6 @@
 <!--footer-->
 <footer>
-  <nav class="navbar fixed-bottom navbar-dark bg-dark">
+  <nav class="navbar fixed-bottom" style="background: linear-gradient(0deg, rgba(0,0,0,1) 16%, rgba(184,155,203,1) 86%);">
     <h6 class="navbar-text">&copy; Copyright 2024. All rights reserved</h6>
     <h6 class="navbar-text"> Group 16: Tala Bashanfar, Ethar Almaghrabi, Ashvien Rameshkumar  .</h6>
   </nav>
