--- a/server/views/Partials/main_nav.ejs
+++ b/server/views/Partials/main_nav.ejs
@@ -18,18 +18,18 @@
         <!--home link active class applied if current title is "Home" -->
         <li class="nav-item">
           <% if(title=="Home") { %>
-              <a class="nav-link active" href="./home" style="font-weight: bold;">
+              <a class="nav-link active" href="./home" style="font-weight: bold; color: rgb(53, 153, 153);">
           <% } else { %>
-              <a class="nav-link" href="./home" style="font-weight: bold;">
+              <a class="nav-link" href="./home" style="font-weight: bold; color: rgb(15, 104, 171);">
           <% } %>
               <i class="fa-solid fa-house-chimney"></i> Home</a> <!--FontAwesome icon and text -->
         </li>
         <!--survey tracker link , active class applied if current title is "Survey Tracker" -->
         <li class="nav-item">
           <% if(title == "Survey Tracker") { %>
-            <a class="nav-link active" href="/surveyslist" style="font-weight: bold;">
+            <a class="nav-link active" href="/surveyslist" style="font-weight: bold; color: rgb(53, 153, 153);">
           <% } else { %>
-            <a class="nav-link" href="/surveyslist" style="font-weight: bold;">
+            <a class="nav-link" href="/surveyslist" style="font-weight: bold; color: rgb(15, 104, 171);">
           <% } %>  
           <i class="fa-solid fa-book"></i> Survey Tracker</a><!--FontAwesome icon and text -->
         </li>
