--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,4 +1,5 @@
-body{
-    background: radial-gradient(circle, rgba((186,189,226,1) 0%, rgba(137,81,89,1) 100%);
-
+body {
+    background: radial-gradient(circle, rgba(186, 189, 226, 1) 0%, rgba(137, 81, 89, 1) 100%);
 }
+
+
